# sucide_analysis

./: .env  .env.example  README.md  backend.dockerfile  celeryworker.dockerfile  docker-compose.dev.yml  docker-compose.yml  gunicorn_conf.py  pyproject.toml
app/: README.md  example.env  pyproject.toml  worker-start.sh
app/app/: exceptions.py  main.py
app/app/api/: deps.py
app/app/api/api_v1/services/: auth.py  users.py
app/app/core/: celery_app.py  config.py  security.py
app/app/core/middleware/: __init__.py  get_accept_language_middleware.py  time_logger.py
app/app/crud/: __init__.py  base.py  crud_user.py
app/app/db/: base.py  base_class.py  init__db.py  init_db.py  session.py
app/app/models/: Suicide.py  User.py  __init__.py  request_log.py
app/app/notebook/: Suicide.ipynb
app/app/schemas/: token.py  user.py
app/app/utils/: __init__.py  message_codes.py  redis.py
ml_project/: README.md
ml_project/data/: test.csv
ml_project/notebook/: Suicide.ipynb
ml_project/notebook/.ipynb_checkpoints/: Suicide-checkpoint.ipynb
notebook/: Suicide.ipynb
