[tool.poetry]
name = "sucide"
version = "0.1.0"
description = ""
authors = ["alialibakhshi <alialibakhshi9898@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
torch = "^2.6.0"
matplotlib = "^3.10.1"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
