[tool.poetry]
name = "sucide"
version = "0.1.0"
description = ""
authors = ["alialibakhshi <alialibakhshi9898@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
torch = "^2.6.0"
matplotlib = "^3.10.1"
nltk = "^3.9.1"
counter = "^1.0.0"
textblob = "^0.19.0"
pydantic = "^2.10.6"
alembic = "^1.15.1"
fastapi = "^0.115.11"
pydantic-settings = "^2.8.1"
cache = "^1.0.3"
persiantools = "^5.2.0"
asyncpg = "^0.30.0"
keras = "^3.9.0"
tensorflow = "2.19.0"
ydf = "^0.11.0"
seaborn = "^0.13.2"
tensorflow-decision-forests = "^1.12.0"
torchvision = "^0.21.0"
jwt = "^1.3.1"
bcrypt = "^4.3.0"
docx = "^0.2.4"
python-docx = "^1.1.2"
redis = "^5.2.1"
xgboost = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
